--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,7 @@
         "php": ">=5.5.9",
         "illuminate/contracts": "5.1.* || 5.2.*",
         "illuminate/support": "5.1.* || 5.2.*",
-        "graham-campbell/manager": "^2.3",
-        "zenstruck/backup": "^1.2",
-        "graham-campbell/flysystem": "^3.3"
+        "zenstruck/backup": "^1.2"
     },
     "require-dev": {
         "graham-campbell/testbench": "^3.1",
