--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "require": {
         "php": ">=5.5.9",
+        "illuminate/console": "5.1.* || 5.2.*",
         "illuminate/contracts": "5.1.* || 5.2.*",
         "illuminate/support": "5.1.* || 5.2.*",
         "zenstruck/backup": "^1.2"
