--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
+        "php": "^5.5.9 || ^7.0",
         "illuminate/console": "5.1.* || 5.2.*",
         "illuminate/contracts": "5.1.* || 5.2.*",
         "illuminate/support": "5.1.* || 5.2.*",
