--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
     ],
     "require": {
         "php": "^5.5.9 || ^7.0",
-        "illuminate/console": "5.1.* || 5.2.*",
-        "illuminate/contracts": "5.1.* || 5.2.*",
-        "illuminate/support": "5.1.* || 5.2.*",
+        "illuminate/console": "5.1.* || 5.2.* || 5.3.*",
+        "illuminate/contracts": "5.1.* || 5.2.* || 5.3.*",
+        "illuminate/support": "5.1.* || 5.2.* || 5.3.*",
         "zenstruck/backup": "^1.2"
     },
     "require-dev": {
