--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,15 @@
     ],
     "require": {
         "php": "^5.6.4 || ^7.0",
-        "illuminate/console": "5.1.* || 5.2.* || 5.3.*",
-        "illuminate/contracts": "5.1.* || 5.2.* || 5.3.*",
-        "illuminate/support": "5.1.* || 5.2.* || 5.3.*",
+        "illuminate/console": "5.2.* || 5.3.*",
+        "illuminate/contracts": "5.2.* || 5.3.*",
+        "illuminate/support": "5.2.* || 5.3.*",
         "zenstruck/backup": "^1.2"
     },
     "require-dev": {
         "graham-campbell/testbench": "^3.2",
         "mockery/mockery": "^0.9.5",
-        "phpunit/phpunit": "^5.4"
+        "phpunit/phpunit": "^5.6"
     },
     "autoload": {
         "psr-4": {
