--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": "^5.6.4 || ^7.0",
+        "php": "^7.0",
         "illuminate/console": "5.2.* || 5.3.*",
         "illuminate/contracts": "5.2.* || 5.3.*",
         "illuminate/support": "5.2.* || 5.3.*",
