--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "vinkla/backup",
-    "description": "A backup manager for Laravel",
+    "description": "An easy-to-use backup manager for Laravel",
     "license": "MIT",
     "keywords": ["laravel", "backup", "database", "flysystem"],
     "authors": [
@@ -19,7 +19,6 @@
     },
     "require-dev": {
         "graham-campbell/testbench": "^3.2",
-        "mockery/mockery": "^0.9.5",
         "phpunit/phpunit": "^5.6"
     },
     "autoload": {
