--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "zenstruck/backup": "^1.2"
     },
     "require-dev": {
+        "graham-campbell/analyzer": "^1.1",
         "graham-campbell/testbench": "^4.0",
         "phpunit/phpunit": "^6.2"
     },
