--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
     ],
     "require": {
         "php": "^7.0",
-        "illuminate/console": "5.4.* || 5.5.*",
-        "illuminate/contracts": "5.4.* || 5.5.*",
-        "illuminate/support": "5.4.* || 5.5.*",
+        "illuminate/console": "5.3.* || 5.4.* || 5.5.*",
+        "illuminate/contracts": "5.3.* || 5.4.* || 5.5.*",
+        "illuminate/support": "5.3.* || 5.4.* || 5.5.*",
         "zenstruck/backup": "^1.2"
     },
     "require-dev": {
